--- a/api/developer/models/developer.settings.json
+++ b/api/developer/models/developer.settings.json
@@ -20,6 +20,10 @@
       "type": "uid",
       "required": true,
       "targetField": "name"
+    },
+    "games": {
+      "via": "developers",
+      "collection": "game"
     }
   }
 }
