--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "jsdom": "^16.6.0",
     "knex": "0.21.18",
     "pg": "8.5.1",
     "strapi": "3.6.5",
