--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "strapi-plugin-upload": "3.6.5",
     "strapi-plugin-users-permissions": "3.6.5",
     "strapi-provider-email-nodemailer": "^3.6.5",
+    "strapi-provider-upload-cloudinary": "^3.6.5",
     "strapi-utils": "3.6.5",
     "stripe": "^8.165.0"
   },
